tdf#114657 OOXML chart export: fix broken chart with NaN X value

Export c:pt elements only for numbers instead of replace the correct
X values with the sequence 1, 2, 3..., when the X values contain a NaN
value.

This reverts commit a211c754003f98bc8f7761224a0b265bd224f61f
"fdo77216-Charts-Scattered chart: Chart gets distorted on RT"

Change-Id: I6d0bec870b5317575d93eff407b3ec2ada56431e